fix: Footnote vertical alignments, change link colours.
- set anchor link colours in `post.html` to link-color css var.
- allocate min-width 3 chars to `<sup>` element for alignment.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -612,6 +612,7 @@ footer {
     }
 
     p > a {
+      color: var(--link-color);
       &:visited {
         color: var(--link-visited-color);
       }
@@ -795,10 +796,12 @@ footer {
 .footnote-definition {
   display: flex;
   line-height: 1.1em;
+  align-items: center;
 
   &-label {
     font-size: 1em;
     margin-right: 0.5em;
+    min-width: 3ch;
     &::after {
       content: ".";
     }
